--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,56 @@
-flask
-streamlit
-pandas
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+category-encoders==2.6.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+et_xmlfile==2.0.0
+Flask==3.1.0
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+narwhals==1.37.1
+numba==0.61.2
 numpy==1.26.0
-joblib
-requests
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+patsy==1.0.1
+pillow==11.2.1
+plotly==6.1.1
+protobuf==6.30.2
+pyarrow==20.0.0
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+requests==2.32.3
+rpds-py==0.24.0
 scikit-learn==1.4.1.post1
-xgboost
-shap
-requests
-streamlit
 scipy==1.12.0
-python-dateutil
-category_encoders==2.6.0
-plotly
+shap==0.47.2
+six==1.17.0
+slicer==0.0.8
+smmap==5.0.2
+statsmodels==0.14.4
+streamlit==1.45.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+xgboost==3.0.0
