--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-category-encoders==2.6.0
-Flask==3.1.0
-joblib==1.5.0
+flask
+streamlit
+pandas
 numpy==1.26.0
-openpyxl==3.1.5
-pandas==2.2.3
-plotly==6.1.1
-requests==2.32.3
+joblib
+requests
 scikit-learn==1.4.1.post1
-scipy==1.12.0
-shap
-statsmodels
-streamlit==1.45.0
 xgboost
+shap
+requests
+streamlit
+scipy==1.12.0
+python-dateutil
+category_encoders==2.6.0
+plotly
