--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ python-dateutil
 category_encoders==2.6.0
 plotly
 openpyxl
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.97.0
